# connect2discord

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  README.md.md  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.bot.json  tsconfig.frontend.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.obsidian/: workspace
docs/: Authorization.md  Communications.md  Database interactions.md  Frontend UI.md  README.md
public/: global.css  index.html
src/bot/: deployCommands.ts  index.ts
src/bot/routes/: guildCreate.ts
src/frontend/: App.svelte
src/frontend/components/: GuildInfo.svelte  GuildLink.svelte  GuildList.svelte  Profile.svelte
src/frontend/intefaces/: accessCodeResponce.ts
src/frontend/interfaces/: discordUser.ts  guild.ts  userGuild.ts
src/frontend/models/: User.ts
src/frontend/modules/: bot.ts  database.ts  discordBot.ts  discordRequests.ts  discordUser.ts  user.ts
src/frontend/stores/: activeGuild.ts
src/server/: Cargo.toml  index.ts
src/server/api/v1/: v1.ts
src/server/src/: main.rs  paths.rs
src/server/src/paths/: database_api.rs  discord_api.rs  guilds.rs  identify.rs
