[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.1"
actix-web = "4"
dotenv = "0.15.0"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
